test/libhyperion/syntaxTests/types/function_types/selector/state_variable_selector_contract_name.hyp
contract A {
    function() external public f;
}

contract C {
    bytes4 constant s4 = A.f.selector;
}
// ----
// TypeError 4888: (17-45): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
